--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -99,7 +99,7 @@
                 {% if site.author.scratch %}
                 <li>
                   <a href="https://scratch.mit.edu/{{ site.author.scratch }}" class="zocial primary icon" target="_blank">
-                    <img src="{{ ASSET_PATH }}/assets/themes/hooligan/images/scratch.svg" />
+                    <img src="{{ ASSET_PATH }}/images/scratch.svg" />
                     <span class="hidden-desktop">Scratch</span>
                   </a>
                 </li>
