--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -98,7 +98,7 @@
                 {% endif %}
                 {% if site.author.scratch %}
                 <li>
-                  <a href="https://scratch.mit.edu/{{ site.author.scratch }}" class="zocial primary icon" target="_blank">
+                  <a href="https://scratch.mit.edu/{{ site.author.scratch }}" class="zocial scratch icon" target="_blank">
                     S
                     <span class="hidden-desktop">Scratch</span>
                   </a>
