--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -151,7 +151,7 @@
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/vendor/jekyll-search.min.js" type="text/javascript"></script>
 <script>
-var searchInput = document.getElementById('search-input
+var searchInput = document.getElementById('search-input');
 if(searchInput != null){
   searchInput.value = location.pathname.replace(/[\/\-]/g, " ").trim();
   SimpleJekyllSearch({
