--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -151,6 +151,7 @@
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/vendor/jekyll-search.min.js" type="text/javascript"></script>
 <script>
+window.postload = function(){
 var searchInput = document.getElementById('search-input');
 if(searchInput != null){
   searchInput.value = location.pathname.replace(/[\/\-]/g, " ").trim();
@@ -180,6 +181,9 @@ if(searchInput != null){
     }
   }, 500);
 }
+}
+
+window.postload();
 </script>
 
     {% include JB/analytics %}
