--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -151,7 +151,7 @@
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/vendor/jekyll-search.min.js" type="text/javascript"></script>
 <script>
-window.postload = function(){
+window.reparseLinks = function(){
     if(window.hpsEnabled){
         var as = document.getElementsByTagName("a");
         for(var i = 0; i < as.length; i++){
@@ -160,13 +160,24 @@ window.postload = function(){
             }
         }
     }
+}
+window.postload = function(){
+    reparseLinks();
+    
+    var resultsContainer = document.getElementById('results-container');
+    var observer = new MutationObserver(function(mutations) {
+       reparseLinks();
+    });
+    var config = { attributes: true, childList: true, characterData: true };
+    observer.observe(resultsContainer, config);
+ 
     
 var searchInput = document.getElementById('search-input');
 if(searchInput != null){
   searchInput.value = location.pathname.replace(/[\/\-]/g, " ").trim();
   SimpleJekyllSearch({
     searchInput: searchInput,
-    resultsContainer: document.getElementById('results-container'),
+    resultsContainer: resultsContainer,
     json: '/search.json',
   });
 
@@ -193,7 +204,7 @@ if(searchInput != null){
 }
 
 window.hpsEnabled = !!history.pushState;
-function loadPage(pathname){
+window.loadPage = function(pathname){
     var xhr = new XMLHttpRequest();
     xhr.onload = function() {
         var title = this.responseXML.title;
@@ -211,12 +222,12 @@ window.onhpslink = function(e){
     if(this.hostname == "aputurk.tk"){
         e.preventDefault();
         history.pushState({}, "", this.pathname);
-        loadPage(this.pathname);
+        window.loadPage(this.pathname);
     }
 }
 if(window.hpsEnabled){
     window.onpopstate = function(){
-        loadPage(location.pathname);
+        window.loadPage(location.pathname);
     }
 }
 window.postload();
