--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -44,8 +44,11 @@
       
 <style type='text/css'>
 .uil-spin-css {
-  width: 20px;
-  height: 20px;
+    width: 20px;
+    height: 20px;
+    position: relative;
+    top: -7px;
+    display: inline-block;
 }
 width: 100%;
 @-webkit-keyframes uil-spin-css {
