--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -529,6 +529,17 @@ if(searchInput != null){
 }
 }
 
+window.reloadDQ = function(){
+    window.disqus_shortname = 'aputurktk'; // required: replace example with your forum shortname
+    
+    /* * * DON'T EDIT BELOW THIS LINE * * */
+    (function() {
+        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+    })();
+}
+
 window.hpsEnabled = !!history.pushState;
 window.loadPage = function(pathname){
     var to = setTimeout(function(){
@@ -543,6 +554,7 @@ window.loadPage = function(pathname){
         history.replaceState({}, title, pathname);
         document.getElementById("page-wrap").innerHTML = res;
         window.postload();
+        window.reloadDQ();
     }
     xhr.open("GET", pathname);
     xhr.responseType = "document";
