--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -580,6 +580,6 @@ window.postload();
 </script>
 
     {% include JB/analytics %}
-    <script id="dsq-count-scr" src="//EXAMPLE.disqus.com/count.js" async></script>
+    <script id="dsq-count-scr" src="//aputurktk.disqus.com/count.js" async></script>
   </body>
 </html>
