Even more mobile friendly, for no reason basically :P

--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -41,6 +41,10 @@
     <meta name="msapplication-TileColor" content="#1169AA">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#1169AA">
+    <meta name="msapplication-navbutton-color" content="#1169AA">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
       
 <style type='text/css'>
 .uil-spin-css {
