--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -466,7 +466,8 @@ width: 100%;
     <footer>
       <div class="container">
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}<br/>
-          Uses <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+          Uses <a href="http://pages.github.com" target="_blank">GH Pages</a>
+          | <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
           | <a href="http://github.com/dhulihan/hooligan" target="_blank">The Hooligan Theme</a>
         </p>
       </div>
