--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -559,6 +559,7 @@ window.loadPage = function(pathname){
         var res = this.responseXML.getElementById("page-wrap").innerHTML;
         document.title = title;
         history.replaceState({}, title, pathname);
+        _gaq.push(['_trackPageview', pathname]);
         document.getElementById("page-wrap").innerHTML = res;
         window.postload();
         window.reloadDQ();
