--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -477,6 +477,7 @@ width: 100%;
     <script>window.jQuery || document.write('<script src="{{ ASSET_PATH }}/js/jquery.min.js"><\/script>')</script>
     <script src="{{ ASSET_PATH }}/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/vendor/jekyll-search.min.js" type="text/javascript"></script>
+    <script src="//scratchblocks.github.io/js/scratchblocks-v3-min.js"></script>
 <script>
 window.reparseLinks = function(){
     if(window.hpsEnabled){
@@ -492,6 +493,8 @@ window.reparseLinks = function(){
 window.postload = function(){
     document.getElementById("loader").style.opacity = 0;
     reparseLinks();
+    
+    scratchblocks.renderMatching("pre.blocks");
     
     var resultsContainer = document.getElementById('results-container');
     if(resultsContainer != null){
