--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -47,6 +47,13 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
       
 <style type='text/css'>
+    pre.blocks {
+        text-shadow: none;
+        background: transparent;
+        border: 0;
+        box-shadow: none;
+    }
+    
 .uil-spin-css {
     width: 20px;
     height: 20px;
