--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -51,7 +51,7 @@
         text-shadow: none;
     }
     
-    pre.inline-blocks {
+    a[href="scratchblocks:inline"] {
         text-shadow: none;
         box-shadow: none;
         background: 0;
@@ -508,7 +508,7 @@ window.postload = function(){
     reparseLinks();
     
     scratchblocks.renderMatching("pre.blocks");
-    scratchblocks.renderMatching("pre.inline-blocks", {inline: true});
+    scratchblocks.renderMatching("a[href=\"scratchblocks:inline\"]", {inline: true});
     
     var resultsContainer = document.getElementById('results-container');
     if(resultsContainer != null){
