--- a/_includes/themes/hooligan/default.html
+++ b/_includes/themes/hooligan/default.html
@@ -58,6 +58,8 @@
         display: inline-block;
         margin: 0;
         padding: 0;
+        height: 14px;
+        line-height: 14px;
     }
     
 .uil-spin-css {
